cleaned up docs

--- a/scripts/sample_config.json
+++ b/scripts/sample_config.json
@@ -11,7 +11,8 @@
             "someUnusedAttribute": 50
         },
         "addresses": {
-            "fields": ["id","city"]
+            "fields": ["id","city"],
+            "case": "upper"
         }
     }
 }
