--- a/sample_configs/census_config.json
+++ b/sample_configs/census_config.json
@@ -8,14 +8,13 @@
                 "path": "/Users/matt/Projects/dataplunger/sample_data/Washington_All_Geographies_Tracts_Block_Groups_Only",
                 "delimiter": ",",
                 "encoding": "UTF-8",
-                "sequence": 2,
                 "fields": {
                     "Total": 1,
                     "Male": 2,
                     "Female": 17
                 },
-                "starting_position": 87,
-                "sumlevels": [140]
+                "sequence": 2,
+                "starting_position": 87
             },
             "layers": {
                 "Sex_By_Age": {
