--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 before_install:
   - "echo | sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable"
   - "sudo apt-get update"
-  - "sudo apt-get install libgdalh1 libgdal-dev gdal-bin"
+  - "sudo apt-get install libgdal1h libgdal-dev gdal-bin"
 
 # command to install dependencies
 install:
